# linear-base

./: .dir-locals.el  .ghcid  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  README.md  avg_manual_bench_and_patch.py  bench_ghc-dps-compact-95615577d7_manual_tweag-laptop.txt  bench_ghc-dps-compact-95615577d7_tweag-laptop.txt  bench_manual_aggr_tweag-laptop.csv  bench_manual_tweag-laptop.csv  bench_patched_tweag-laptop.csv  bench_tweag-laptop.csv  cabal.project  flake.nix  format.sh  ghc-dps-compact-702220602b.tar.xz  ghc-dps-compact-95615577d7.tar.xz  linear-base.cabal  linear-streams.cabal  memory_using_dest_c86e68fca2a3f1ce4ea5aa18c31e336059d1ccbd.txt  memory_without_dest_c86e68fca2a3f1ce4ea5aa18c31e336059d1ccbd.txt  nixpkgs.nix  parse_benchmarks.py  parse_s_records.py  plot.py  shell-stack.nix  shell.nix  show_csv_diff.py  stack.yaml  stats_peak_offset.py
.buildkite/: pipeline.yml
.circleci/: config.yml
.github/: settings.yml
.github/workflows/: ci.yaml
bench/: Main.hs
bench-version-changes/ghc-dps-compact/after/: Main.hs
bench-version-changes/ghc-dps-compact/after/Bench/: Compact.hs
bench-version-changes/ghc-dps-compact/after/datasets/: data_2_10.sexpr  data_2_13.sexpr  data_2_16.sexpr  data_2_19.sexpr  data_2_22.sexpr  sexpr_sample.sexpr
bench-version-changes/ghc-dps-compact/before/: Main.hs
bench-version-changes/ghc-dps-compact/before/Bench/: Compact.hs
bench/Bench/Data/Array/: Mutable.hs
bench/Bench/Data/HashMap/: Mutable.hs
bench/Data/Mutable/: Array.hs  HashMap.hs  Quicksort.hs
docs/: CLASS_TABLE.md  DESIGN.md  USER_GUIDE.md
examples/: Examples.hs  Linear.hs  Main.hs  NonLinear.hs  README.md  Spec.hs  temp.txt
examples-version-changes/ghc-dps-compact/after/Compact/: BFTraversal.hs  DList.hs  Map.hs  Queue.hs  SExpr.hs
examples-version-changes/ghc-dps-compact/before/Compact/: BFTraversal.hs  DList.hs  Map.hs  Queue.hs  SExpr.hs
examples/Data/Array/Mutable/: Quicksort.hs
examples/Data/HashMap/Mutable/: TopSort.hs
examples/Foreign/: Heap.hs  List.hs
examples/Generic/: Traverse.hs
examples/OffHeap/: Heap.hs  List.hs
examples/Simple/: DerivingVia.hs  FileIO.hs  Pure.hs  Quicksort.hs  TopSort.hs
examples/Test/: Foreign.hs  Generic.hs  Quicksort.hs
ghc92/Prelude/Linear/Generically/: Types.hs
ghc92/Prelude/Linear/Internal/: TypeEq.hs
ghc94/Prelude/Linear/Generically/: Types.hs
ghc94/Prelude/Linear/Internal/: TypeEq.hs
linear-streams/: .gitignore  linear-streams.cabal  stack.yaml
linear-streams/examples/: Linear.hs
linear-streams/src/: Streaming.hs
linear-streams/src/Streaming/Internal/: Interop.hs  Many.hs
memory/: Main.hs
memory/Bench/Compact/: Pure.hs  SExpr.hs  test_data.sexpr
memory/Compact/: Pure.hs  SExpr.hs
nix/: cabal-docspec.nix  shell-stack.nix  sources.json
simple-examples/: Examples.hs  FileIO.hs  MutableArrays.hs  Pure.hs
src/: Lib.hs  Streaming.hs
src-version-changes/ghc-dps-compact/after/Compact/: Destination.hs
src-version-changes/ghc-dps-compact/before/Compact/: Destination.hs
src/Compact/: Pure.hs
src/Compact/Pure/: Internal.hs
src/Control/Arrow/: Linear.hs
src/Control/Category/: Linear.hs
src/Control/Functor/: Linear.hs
src/Control/Functor/Linear/: Coyoneda.hs  Curried.hs  Yoneda.hs
src/Control/Monad/: Builder.hs  Linear.hs
src/Control/Monad/Lift/: Linear.hs
src/Control/Monad/Linear/: Builder.hs  Internal.hs
src/Control/Monad/ST/: Linear.hs
src/Control/Optics/: Linear.hs
src/Control/Optics/Linear/: Internal.hs  Iso.hs  Lens.hs  Prism.hs  Traversal.hs
src/Data/: OffHeap.hs  With.hs
src/Data/Applicative/: Linear.hs
src/Data/Arity/: Linear.hs
src/Data/Arity/Linear/: Internal.hs
src/Data/Array/: Destination.hs  Polarised.hs  Polarized.hs
src/Data/Array/Destination/: Internal.hs
src/Data/Array/Mutable/: Linear.hs
src/Data/Array/Polarized/: Pull.hs  Push.hs
src/Data/Bifunctor/: Linear.hs
src/Data/Bits/: Linear.hs
src/Data/Bool/: Linear.hs
src/Data/Complex/: Linear.hs
src/Data/Deque/Mutable/: Linear.hs
src/Data/Either/: Linear.hs
src/Data/Eq/: Linear.hs
src/Data/Foldable/: Linear.hs
src/Data/Functor/: Linear.hs
src/Data/Functor/Internal/: Applicative.hs  Functor.hs
src/Data/Functor/Linear/: Coyoneda.hs  Internal.hs  Yoneda.hs
src/Data/HashMap/: Linear.hs
src/Data/HashMap/Mutable/: Linear.hs
src/Data/Heap/Mutable/: Linear.hs
src/Data/Linear/: Array.hs  Vector.hs
src/Data/Linear/Internal/: MutableArray.hs
src/Data/List/: Linear.hs
src/Data/List/NonEmpty/: Linear.hs
src/Data/Maybe/: Linear.hs
src/Data/Monoid/: Linear.hs
src/Data/Num/: Linear.hs
src/Data/Ord/: Linear.hs
src/Data/Profunctor/: Linear.hs
src/Data/Profunctor/Kleisli/: Linear.hs  NonLinear.hs
src/Data/Queue/Mutable/: Linear.hs
src/Data/Replicator/: Linear.hs
src/Data/Replicator/Linear/: Internal.hs
src/Data/Semigroup/: Linear.hs
src/Data/Set/Mutable/: Linear.hs
src/Data/Stack/Mutable/: Linear.hs
src/Data/Traversable/: Linear.hs
src/Data/Tuple/: Linear.hs
src/Data/Unrestricted/: Consumable.hs  Linear.hs
src/Data/Unrestricted/Internal/: Consumable.hs  (+7 more)
src/Data/V/: Linear.hs
src/Data/VM/: Linear.hs
src/Data/Vector/: Linear.hs
src/Debug/Trace/: Linear.hs
src/Foreign/Marshal/: Pure.hs
src/Linear/: Prelude.hs  Unsafe.hs
src/Prelude/: Linear.hs
src/Prelude/Linear/: GenericUtil.hs  Generically.hs  Internal.hs  Unsatisfiable.hs
src/Streaming/: Consume.hs  Interop.hs  Linear.hs  Many.hs  Pair.hs  Prelude.hs  Process.hs  Produce.hs  Streaming.hs  Type.hs
src/Streaming/Internal/: Consume.hs  Interop.hs  Many.hs  Process.hs  Produce.hs  Type.hs
src/Streaming/Prelude/: Linear.hs
src/System/IO/: Linear.hs  Resource.hs
src/System/Linear/: IO.hs
src/Unsafe/: Linear.hs  MutableArray.hs
src/Unsafe/Linear/: Internal.hs
test/: Doctest.hs  Main.hs  Spec.hs
test-examples/: Main.hs
test-examples/Test/: Foreign.hs
test-examples/Test/Simple/: Quicksort.hs
test/Test/Compact/: Pure.hs
test/Test/Data/: Destination.hs  List.hs  Polarized.hs  Replicator.hs  V.hs
(+121 files in other folders)
