cabal-version:      >=1.10
name:               linear-base
version:            0.1.1
license:            MIT
license-file:       LICENSE
copyright:          (c) Tweag Holding and affiliates
maintainer:         arnaud.spiwack@tweag.io
author:             Tweag
homepage:           https://github.com/tweag/linear-base#README
synopsis:           Standard library for linear types.
description:        Please see README.md.
category:           Prelude
build-type:         Simple
extra-source-files:
    README.md
    CHANGELOG.md
    docs/DESIGN.md
    docs/USER_GUIDE.md

source-repository head
    type:     git
    location: https://github.com/tweag/linear-base

library
    exposed-modules:
        Control.Monad.IO.Class.Linear
        Control.Functor.Linear
        Control.Functor.Linear.Internal.Class
        Control.Functor.Linear.Internal.Instances
        Control.Functor.Linear.Internal.Kan
        Control.Functor.Linear.Internal.MonadTrans
        Control.Functor.Linear.Internal.Reader
        Control.Functor.Linear.Internal.State
        Control.Optics.Linear
        Control.Optics.Linear.Internal
        Control.Optics.Linear.Iso
        Control.Optics.Linear.Lens
        Control.Optics.Linear.Prism
        Control.Optics.Linear.Traversal
        Data.Array.Destination
        Data.Array.Destination.Internal
        Data.Array.Mutable.Linear
        Data.Array.Mutable.Linear.Internal
        Data.Array.Mutable.Unlifted.Linear
        Data.Array.Polarized
        Data.Array.Polarized.Pull
        Data.Array.Polarized.Pull.Internal
        Data.Array.Polarized.Push
        Data.Bifunctor.Linear
        Data.Bifunctor.Linear.Internal.Bifunctor
        Data.Bifunctor.Linear.Internal.SymmetricMonoidal
        Data.Bool.Linear
        Data.Either.Linear
        Data.Functor.Linear
        Data.Functor.Linear.Internal.Functor
        Data.Functor.Linear.Internal.Applicative
        Data.Functor.Linear.Internal.Traversable
        Data.Functor.Linear.Internal.Traversable.Generic
        Data.HashMap.Mutable.Linear
        Data.HashMap.Mutable.Linear.Internal
        Data.List.Linear
        Data.Maybe.Linear
        Data.Monoid.Linear
        Data.Monoid.Linear.Internal.Monoid
        Data.Monoid.Linear.Internal.Semigroup
        Data.Num.Linear
        Data.Ord.Linear
        Data.Ord.Linear.Internal.Ord
        Data.Ord.Linear.Internal.Eq
        Data.Profunctor.Kleisli.Linear
        Data.Profunctor.Linear
        Data.Set.Mutable.Linear
        Data.Set.Mutable.Linear.Internal
        Data.Tuple.Linear
        Data.Unrestricted.Linear
        Data.Unrestricted.Internal.Consumable
        Data.Unrestricted.Internal.Dupable
        Data.Unrestricted.Internal.Movable
        Data.Unrestricted.Internal.Instances
        Data.Unrestricted.Internal.Ur
        Data.Unrestricted.Internal.UrT
        Data.Replicator.Linear
        Data.Replicator.Linear.Internal
        Data.Replicator.Linear.Internal.ReplicationStream
        Data.Replicator.Linear.Internal.Instances
        Data.Arity.Linear.Internal.Arity
        Data.V.Linear
        Data.V.Linear.Internal
        Data.V.Linear.Internal.Instances
        Data.Vector.Mutable.Linear
        Data.Vector.Mutable.Linear.Internal
        Debug.Trace.Linear
        Foreign.Marshal.Pure
        Foreign.Marshal.Pure.Internal
        Prelude.Linear
        Prelude.Linear.Internal
        Streaming.Linear
        Streaming.Prelude.Linear
        Streaming.Internal.Consume
        Streaming.Internal.Interop
        Streaming.Internal.Many
        Streaming.Internal.Process
        Streaming.Internal.Produce
        Streaming.Internal.Type
        System.IO.Linear
        System.IO.Resource
        System.IO.Resource.Internal
        Unsafe.Linear

    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -O
    build-depends:
        base >=4.15 && <5,
        containers,
        ghc-prim,
        hashable,
        linear-generics,
        storable-tuple,
        text,
        transformers,
        vector >=0.12.2,
        primitive

test-suite test
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   test
    other-modules:
        Test.Data.Destination
        Test.Data.Mutable.Array
        Test.Data.Mutable.Vector
        Test.Data.Mutable.HashMap
        Test.Data.Mutable.Set
        Test.Data.Polarized

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base,
        linear-base,
        containers,
        hedgehog,
        tasty,
        tasty-hedgehog,
        mmorph,
        vector

test-suite examples
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   examples
    other-modules:
        Test.Foreign
        Test.Quicksort
        Test.Generic
        Foreign.List
        Foreign.Heap
        Simple.FileIO
        Simple.Pure
        Simple.Quicksort
        Simple.TopSort
        Generic.Traverse

    default-language: Haskell2010
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N
    build-depends:
        base,
        linear-base,
        tasty,
        tasty-hedgehog,
        hedgehog,
        storable-tuple,
        vector,
        text,
        linear-generics

benchmark mutable-data
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    hs-source-dirs:   bench
    other-modules:
        Data.Mutable.HashMap
        Data.Mutable.Array

    default-language: Haskell2010
    ghc-options:      -O
    build-depends:
        base,
        vector,
        deepseq,
        gauge,
        hashtables,
        hashable,
        linear-base,
        random,
        random-shuffle,
        unordered-containers,
        MonadRandom
