name: linear-streams
version: 0.1.0.0
synopsis: Streaming tools with invaraints enforced via linear types.
description: Please see the readme.
homepage: https://github.com/tweag/linear-streams
license: MIT
license-file: LICENSE
author: Tweag I/O
maintainer: divesh.otwani@tweag.io
copyright: (c) EURL Tweag
category: Data, Pipes, Streaming
build-type: Simple
extra-source-files: README.md
cabal-version: >=1.10

library
  hs-source-dirs: src
  exposed-modules:
    Lib
  build-depends:
    base >= 4.7 && < 5,
    linear-base
  default-language: Haskell2010
  other-modules:

source-repository head
  type:     git
  location: https://github.com/tweag/linear-streams
